[package]
name = "llm-output-validator"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Rule-based validator for LLM output strings. Enforce length, regex, JSON, allowed values, or custom predicates."
authors = ["Mukunda Rao Katta <mukunda.vjcs6@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MukundaKatta/llm-output-validator-rs"
homepage = "https://github.com/MukundaKatta/llm-output-validator-rs"
documentation = "https://docs.rs/llm-output-validator"
readme = "README.md"
keywords = ["llm", "validation", "agents", "output", "rules"]
categories = ["api-bindings"]
exclude = [".github/*", "target/*", "*.log"]

[dependencies]
serde_json = "1"

[dev-dependencies]
serde_json = "1"
