[package]
name = "llm-output-validator"
version = "0.1.0"
edition = "2021"
description = "Rule-based validator for LLM string outputs"
license = "MIT"
repository = "https://github.com/MukundaKatta/llm-output-validator-rs"
keywords = ["llm", "validation", "output", "agent", "guardrails"]
categories = ["text-processing"]
exclude = ["target/*", ".github/*", "*.log"]

[dependencies]
regex = "1"
serde_json = "1"
